--- a/vanilla-weather-app/index.html
+++ b/vanilla-weather-app/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello World 👋</h1>
+      <h1>Valencia</h1>
       <a href="" class="btn btn-primary">Click here</a>
     </div>
     <script src="src/app.js"></script>
